add new index to alarm table add method to get most recent alarm remove some legacy code